[tool.poetry]
name = "twitter-switch"
version = "0.1.0"
description = "Syncs your twitter profile to your pluralkit fronter"
authors = ["transfaeries <contact@transfaerie.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.8.0"
pylint = "^2.13.5"
mypy = "^0.942"
pluralkit = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
